--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>dev <span>saber</span></h1>
+        hr
         <nav>
             <ul class="navegaçao primaria">
                 <li><a href="#home">Home</a></li>
@@ -40,3 +41,6 @@
 </body>
 
 </html>
+<!-- 
+    comentarios
+-->
