--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Aprender coisas novas é sempre um desafio constante na vida de alguem que procura estar atualizado nos dias de hoje .</p>
             <a href="#">Dowload CV</a>
         </div>
-        <img src="imag/coding-1841550_640" alt="ilustrativa imagem de uma pessoa">
+        <img src="imag/coding-1841550_640.jpg" alt="ilustrativa imagem de uma pessoa">
     </section>
     <main>
         <article aria-label="seção sobre mim" class="sobre">
@@ -48,8 +48,8 @@
                     <span></span>
                 </div>
             </div>
-            <img src="img/pessoa ilustrativa.png" alt="imagem de uma pessoa ilustrativa">
-            <div class="sobre_conteudo">
+            <img src="img/WhatsApp Image 2023-08-31 at 14.30.26..jpeg" alt="imagem de uma pessoa ilustrativa">
+                                    <div class="sobre_conteudo">
                 <div class="sobre_texto">
                     <h1>I'm Dev Saber - Leonardo</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni error possimus, provident vel,
