alterações em css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="img/WhatsApp Image 2023-08-31 at 14.30.26..jpeg" alt="imagem de uma pessoa ilustrativa">
                                     <div class="sobre_conteudo">
                 <div class="sobre_texto">
-                    <h1>I'm Dev Saber - Leonardo</h1>
+                    <h1>I'm Dev Saber - Israel</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni error possimus, provident vel,
                         accusantium eligendi delectus officia dolore repellat neque modi eaque illo debitis reiciendis!
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni error possimus, provident vel,
