--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <span></span>
                 </div>
             </div>
-            <img src="img/WhatsApp Image 2023-08-31 at 14.30.26..jpeg" alt="imagem de uma pessoa ilustrativa">
+            <img src="imag/WhatsApp Image 2023-08-31 at 14.30.26 (2).jpg" alt="imagem de uma pessoa ilustrativa">
                                     <div class="sobre_conteudo">
                 <div class="sobre_texto">
                     <h1>I'm Dev Saber - Israel</h1>
