--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>Aprender coisas novas é sempre um desafio constante na vida de alguem que procura estar atualizado nos dias de hoje .</p>
             <a href="#">Dowload CV</a>
         </div>
-        <img src="https://vscode.dev/github/israeldarosasaraiva/portifolio/blob/main/imag/sistema-codigo-binario%20(1).webp" alt="ilustrativa imagem de uma pessoa">
+        <img src="imag/WhatsApp Image 2023-08-31 at 14.30.26 (2).jpeg" alt="ilustrativa imagem de uma pessoa">
     </section>
     <main>
         <article aria-label="seção sobre mim" class="sobre">
